# pq-starter-ds-project

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check-clean-notebooks.sh
.github/workflows/: pr-validation.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/reference/: deleteme.md  index.md
notebooks/: sample-notebook.ipynb
src/: deleteme.py
tests/: test_deleteme.py
