[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["someone <someone@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.1"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.28"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG001", # unused arguments in functions
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
]

